# robo-rlhf-multimodal

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  Makefile  PROJECT_CHARTER.md  QUANTUM_RESEARCH_BREAKTHROUGHS.md  QUANTUM_SDLC_IMPLEMENTATION.md  README.md  SECURITY.md  SELF_HEALING_PIPELINE_GUARD.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETE.md  docker-compose.quantum.yml  docker-compose.yml  pyproject.toml  pytest.ini  run_tests.py  terragon_quantum_sdlc_demo.py  test_direct_pipeline.py  test_pipeline_standalone.py  tox.ini  validate_pipeline.py
.devcontainer/: devcontainer.json
.github/: project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.terragon/: autonomous-sdlc.py  config.yaml  value-metrics.json
configs/: prometheus.yml  redis.conf  rlhf_config.yaml
configs/grafana/dashboards/: dashboard.yml
configs/grafana/dashboards/json/: robo-rlhf-overview.json
configs/grafana/datasources/: prometheus.yml
deployment/: Dockerfile.autonomous  autonomous_sdlc_production.yml  nginx.conf
deployment/kubernetes/: autonomous-sdlc-deployment.yaml
deployment/scripts/: start_autonomous_sdlc.sh
docs/: ARCHITECTURE.md  AUTOMATION.md  DEVELOPMENT.md  ROADMAP.md  SDLC_IMPLEMENTATION_SUMMARY.md  SETUP_REQUIRED.md  TESTING.md
docs/adr/: 0001-multimodal-architecture.md  0002-preference-collection-strategy.md  0003-reward-model-architecture.md  README.md  template.md
docs/deployment/: README.md
docs/guides/: README.md
docs/monitoring/: README.md
docs/runbooks/: README.md  incident-response.md
docs/workflows/: README.md  ci.md
docs/workflows/examples/: cd.yml  ci.yml  dependency-update.yml  release.yml  security.yml
examples/: README.md  advanced_rlhf.py  autonomous_sdlc_basic.py  autonomous_sdlc_optimized.py  autonomous_sdlc_robust.py  basic_usage.py  complete_sdlc_demo.py  generation1_basic_usage.py  generation2_robust_usage.py  generation3_optimized_usage.py  quantum_autonomous_sdlc_demo.py  quantum_sdlc_demo.py
robo_rlhf/: __init__.py  cli.py
robo_rlhf/algorithms/: __init__.py  ppo.py  reward_learning.py  rlhf.py
robo_rlhf/collectors/: __init__.py  base.py  devices.py  optimized.py  recorder.py
robo_rlhf/core/: __init__.py  advanced_monitoring.py  auto_scaling.py  config.py  exceptions.py  globalization.py  logging.py  performance.py  quantum_error_correction.py  quantum_optimization.py  security.py  validators.py
robo_rlhf/database/: __init__.py  connection.py  models.py  repositories.py
robo_rlhf/database/migrations/: 001_initial_schema.sql
robo_rlhf/database/seeds/: demo_seed.py
robo_rlhf/envs/: __init__.py  base.py  mujoco_envs.py
robo_rlhf/models/: __init__.py  actors.py  encoders.py
robo_rlhf/pipeline/: __init__.py  caching.py  detector.py  global_ops.py  guard.py  healer.py  monitor.py  orchestrator.py  reliability.py  scaling.py  security.py
robo_rlhf/preference/: __init__.py  models.py  pair_generator.py  server.py
robo_rlhf/quantum/: __init__.py  advanced_security.py  analytics.py  autonomous.py  cli.py  cognitive_automation.py  experimental_validation.py  global_intelligence.py  hybrid_qcnas.py  neural_evolution.py  optimizer.py  planner.py  production_excellence.py  quantum_algorithms.py  quantum_causal_inference.py  quantum_pareto_optimizer.py  temporal_quantum_memory.py
robo_rlhf/research/: validation_framework.py
robo_rlhf/scripts/: collect_demos.py  evaluate.py  generate_preferences.py  train_rlhf.py
scripts/: collect_metrics.py  mongo-init.js
scripts/automation/: code_quality_monitor.py  dependency_updater.py
tests/: conftest.py  test_autonomous_sdlc.py  test_basic.py  test_integration.py  test_performance_benchmarks.py  test_pipeline_guard.py  test_quality_gates.py
tests/e2e/: test_full_pipeline.py
tests/fixtures/: data_fixtures.py
tests/integration/: test_full_pipeline.py  test_optimized_components.py  test_training_pipeline.py
tests/performance/: test_benchmarks.py  test_performance_benchmarks.py
tests/unit/: test_core_components.py  test_models.py  test_quantum_modules.py
