[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robo-rlhf-multimodal"
version = "0.1.0"
description = "End-to-end pipeline for multimodal reinforcement learning from human feedback (RLHF) in robotics"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Daniel Schmidt", email = "daniel@example.com"},
]
keywords = ["robotics", "rlhf", "multimodal", "reinforcement-learning", "human-feedback"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "torch>=1.12.0",
    "transformers>=4.20.0",
    "opencv-python>=4.6.0",
    "gymnasium>=0.26.0",
    "pydantic>=1.10.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
mujoco = ["mujoco>=2.3.0", "dm-control>=1.0.0"]
isaac = ["isaacsim>=2023.1.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=2.5.0",
    "pytest-benchmark>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "tox>=4.0.0",
]
full = ["robo-rlhf-multimodal[mujoco,isaac,dev]"]

[project.urls]
Homepage = "https://github.com/danielschmidt/robo-rlhf-multimodal"
Repository = "https://github.com/danielschmidt/robo-rlhf-multimodal"
Issues = "https://github.com/danielschmidt/robo-rlhf-multimodal/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["robo_rlhf*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true